# WCA_tools_lib

ages/: Cargo.toml
ages/src/: main.rs
group_menu/: Cargo.toml  index.html
group_menu/src/: js.js  lib.rs
group_new/: Cargo.toml  groups.txt  settings.gs
group_new/src/: activity.rs  competitor.rs  event.rs  main.rs  master.rs  matrix.rs  settings.rs
group_thing/: Cargo.toml  age.txt  dm_tshirts.csv  navndob.csv  output.s  output.txt
group_thing/src/: main.rs
group_thing/src/state/: assign_item.rs  event.rs  mod.rs  settings.rs  stage.rs
scorecard_to_pdf/: Cargo.toml
scorecard_to_pdf/src/: draw_scorecards.rs  font.rs  language.rs  lib.rs  scorecard.rs  scorecard_generator.rs
wca_oauth/: Cargo.toml  refresh
wca_oauth/src/: lib.rs  oauth.rs  wcif_oauth.rs
wca_oauth/src/competition/: mod.rs
wca_oauth/src/wcif/: activity.rs  advancement_condition.rs  assignment.rs  attempt_result.rs  avatar.rs  cutoff.rs  event.rs  mod.rs  person.rs  personal_best.rs  registration.rs  result.rs  role.rs  room.rs  round.rs  schedule.rs  time_limit.rs  venue.rs  wca_id.rs
wca_scorecards_lib/: .gitignore  Cargo.toml
wca_scorecards_lib/dependencies/: competitions.html  group_menu.js  group_menu_bg.wasm  index.html  js.js
wca_scorecards_lib/src/: compiled.rs  lib.rs  localhost_round_1.rs  main.rs  wcif.rs
wca_scorecards_lib/src/localhost/: db.rs  html.rs  mod.rs  responses.rs
wca_scorecards_lib/src/pdf/: mod.rs
