[package]
name = "wca_scorecards_lib"
version = "0.8.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
open = "3.0"
warp = "0.3"
wca_oauth = { path = "../wca_oauth" }
scorecard_to_pdf = { path = "../scorecard_to_pdf" }
async-timer = "0.7"
